# WhisperTrack-Software

./: .clang-format  .gitmodules  .lefthook.yml  CMakeLists.txt  README.md  README.md.old  STM32L496VGTxP_FLASH.ld  cmake_install.cmake  codegen.sh  dependancies.md  nfwf_app.ioc  send_vec_rtt.jl  setup.sh
.devcontainer/: devcontainer.json
cmake/: common_settings.cmake  gcc-x86-64-linux-gnu.cmake
codegen/: bitstream.yml  gen.py
docker/: Dockerfile  build.sh  compose.yml
docs/: FAMScheduler.md  FontusBitstream.md  FontusMessageHandling.md
inc/: FreeRTOSConfig.h  common.h
pipeline/: Dockerfile  build.sh  build_emu.sh  build_stm32.sh  ci-setup-submodules.sh
src/: freertos.c  main.cpp
stm32/: CMakeLists.txt  gcc-arm-none-eabi.cmake  stm32_files.cmake
stm32/Core/Inc/: board.h  main.h  packed_vec.h  popoto_types.h  stm32l4xx_hal_conf.h
stm32/Core/Src/: board.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
stm32/RTT/: SEGGER_RTT_Conf.h
vectors/: crunch.sh  fontusout.pcm  testvect.packed
